<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".Activity.DetalhesBebidaActView">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:backgroundTint="#70000000"
        app:elevation="80dp" />

    <ImageView
        android:id="@+id/img_detalhes_bebidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:src="@drawable/image_bebida" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_detalhes_bebida"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_cerveja_txt"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_nome_cerveja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_cerveja"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/slogan_da_marca_txt"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/teor_alco_lico_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_teor_alcoolico_detalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teor_alcoolico"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/escala_de_amargor_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_escala_amargor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escala_amargor"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sobre_a_cerveja"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_descricao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loren_ipsun"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>